--- a/frontend/src/main/resources/templates/ClientResource/enterPin.html
+++ b/frontend/src/main/resources/templates/ClientResource/enterPin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="webjars/milligram/1.3.0/dist/milligram.min.css"/>
     <title>Enter PIN</title>
 </head>
 <body>
