--- a/docs/slides/styles.css
+++ b/docs/slides/styles.css
@@ -2,5 +2,6 @@
 @import "https://cdn.jsdelivr.net/gh/asciidoctor/asciidoctor@2.0/data/stylesheets/asciidoctor-default.css";
 
 .img {
-    border: 0px!important;
+    border: 0;
+    box-shadow: none;
 }
