--- a/frontend/src/main/resources/templates/ClientResource/enterPin.html
+++ b/frontend/src/main/resources/templates/ClientResource/enterPin.html
@@ -11,7 +11,7 @@
     <div style="text-align: center">
         <h2>Enter PIN</h2>
     </div>
-    <form action="/api/exams/enterPin" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/api/client/pin" method="post" enctype="application/x-www-form-urlencoded">
         <div>
             <input class="form-control" type="text" id="pin" name="pin" placeholder="PIN" required><br>
         </div>
