--- a/frontend/src/main/resources/templates/ClientResource/login.html
+++ b/frontend/src/main/resources/templates/ClientResource/login.html
@@ -11,7 +11,7 @@
     <div style="text-align: center">
         <h2>Login</h2>
     </div>
-    <form action="/api/exams/login" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/api/client/login" method="post" enctype="application/x-www-form-urlencoded">
         <div class="form-group">
             <input class="form-control" type="text" id="fname" name="fname" placeholder="Vorname" required>
         </div>
