fra-75 speciefied for logged in teacher

--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
@@ -17,6 +17,11 @@ table tr.even_col {
     padding-right: 20px;
 }
 
+.header3{
+    padding-left: 20px;
+    color: grey;
+}
+
 .header{
     padding-left: 20px;
 }
