fra-76 add endpoints for examinee  selected exam

--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -3,4 +3,5 @@
 <div class="container content">
     <h1>Dashboard</h1>
     <p>{{globalService.getExaminer.id}}</p>
+    <p>{{globalService.getExamId}}</p>
 </div>
