fra-76 show image with names by side

--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -1,1 +1,27 @@
 <app-sidebar></app-sidebar>
+
+<div class="container-fluid">
+    <div class="card">
+        <h1 class="header" >Exam Titel (todo)</h1>
+        <div class="screenshot">
+            <div class="slideshow">
+                <img class="slideshow" src="../../../assets/img/temp.png" height="650" width="1050">
+             </div>
+            <div class="students">
+                <div class="card names text-black text-left" style="--bs-bg-opacity: .1;">
+                    <div class="card-body">Tamara Melcher</div>
+                  </div>
+                  <br>
+                  <div class="card names text-black text-left">
+                    <div class="card-body">Jakob Unterberger</div>
+                  </div>
+                  <br>
+                <ul>
+                    <ng-container *ngFor="let examinee of examinees">
+                        <li class="list-group-item list-group-item-info">{{examinee.firstName}} {{examinee.lastName}}</li>
+                    </ng-container>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
