fra-81 store logged in examiner in local storage

--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -4,4 +4,5 @@
     <h1>Dashboard</h1>
     <p>{{globalService.getExaminer.id}}</p>
     <p>{{globalService.getExamId}}</p>
+    <p>{{examinerId}}</p>
 </div>
