--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -6,8 +6,9 @@ table tr.even_col {
 }
 
 .container-fluid{
-    padding-top: 20px;
+    padding-top: 40px;
     padding-right: 20px;
+    margin-right: 30px;
 }
 
 .header3{
@@ -32,21 +33,24 @@ table tr.even_col {
     background-color: rgb(96, 215, 255);
 }
 
+.patroullie{ 
+    display: inline;
+}
+
+.form-select{
+    width: 130px;
+    float: right;
+    height: 30px;
+    padding: 2px;
+    padding-left: 5px;
+}
+
 .slideshow{
     margin-left: 20px;
-    display: inline;
     margin-bottom: 80px;
 }
 
-.screenshot{
-    display: inline;
-}
-
 .students{
-    display: inline;
     width: 250px;
-    float: right;
-    margin-top: 200px;
-    margin-right: 50px;
 }
 
