--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
@@ -24,8 +24,8 @@
                     <ng-container>
                         <td>{{i+1}}</td>
                         <td>{{exam.title}}</td>
-                        <td>{{exam.form}}</td>
-                        <td>{{exam.secondTeacher}}</td>
+                        <td *ngFor="let form of exam.forms">{{form}} </td>
+                        <td *ngFor="let teacher of exam.teachers">{{teacher}}</td>
                         <td>{{exam.pin}}</td>
                         <td>{{exam.date | date: 'dd.MM.yyyy'}}</td>
                         <td>{{exam.startTime |date: 'HH:MM'}}</td>
