fra-76 add slideshow (not really working yet)

--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -5,4 +5,5 @@
     <p>{{globalService.getExaminer.id}}</p>
     <p>{{globalService.getExamId}}</p>
     <p>{{examinerId}}</p>
+    <p>{{exam.id}}</p>
 </div>
