--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -2,12 +2,29 @@
 
 <div class="container-fluid">
     <div class="card">
-        <h1 class="header" >Exam Titel (todo)</h1>
+        <h1 class="header" >{{exam.title}}</h1>
         <div class="screenshot">
             <div class="row">
                 <div class="col-9">
                     <div class="slideshow">
-                        <img class="slideshow" src="../../../assets/img/temp.png" height="650" width="1050">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-100" src="../../../assets/img/temp.png" alt="First slide">
+                              </div>
+                              <ng-container *ngFor="let screenshot in screenshots">
+                                <div class="carousel-item">
+                                  <img class="d-block w-100" src="../../../assets/img/temp.png" alt="Second slide">
+                                </div>
+                              </ng-container>
+                            </div>
+                            <a class="carousel-control-prev" (click)="goToPrevious()" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            </a>
+                            <a class="carousel-control-next" (click)="goToNext()" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            </a>
+                          </div>
                      </div>
                 </div>
                 <div class="col-3">
