--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -10,13 +10,8 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="d-block w-100" src="../../../assets/img/temp.png" alt="First slide">
+                                <img class="d-block w-100" src="{{currentScreenshot.pathOfScreenshot}}" alt="Screenshot">
                               </div>
-                              <ng-container *ngFor="let screenshot in screenshots">
-                                <div class="carousel-item">
-                                  <img class="d-block w-100" src="../../../assets/img/temp.png" alt="Second slide">
-                                </div>
-                              </ng-container>
                             </div>
                             <a class="carousel-control-prev" (click)="goToPrevious()" role="button" data-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -40,8 +35,8 @@
                             </select>
                             <br>
                         </div>
-                        <ng-container *ngFor="let examinee of examinees">
                             <br>
+                        <ng-container *ngFor="let examinee of examinees">
                             <div class="card names text-black text-left" style="--bs-bg-opacity: .1;">
                                 <div class="card-body" [ngClass]="{'selected' : toggle, 'normal': !toggle}" (click)="SelectExaminee(examinee.id)">{{examinee.firstName}} {{examinee.lastName}}</div>
                             </div>                        
