--- a/franklyn-frontend/src/app/components/new-test/new-test.component.css
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.css
@@ -36,3 +36,8 @@
     display: inline-block; 
     vertical-align: top;
 }
+
+.container-fluid{
+    background-color: rgb(238, 235, 235) !important;
+    height: 100%;
+}
