--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -9,6 +9,8 @@ table tr.even_col {
     padding-top: 40px;
     padding-right: 20px;
     margin-right: 30px;
+    background-color: rgb(238, 235, 235) !important;
+    height: 100%;
 }
 
 .header3{
