--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.css
@@ -15,6 +15,8 @@ table tr.even_col {
 .container-fluid{
     padding-top: 20px;
     padding-right: 20px;
+    background-color: rgb(238, 235, 235) !important;
+    height: 100%;
 }
 
 .header3{
