--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -6,12 +6,14 @@
                 <div class="card inner">
                     <h3 class="subheader">Titel</h3>
                     <h1 class="text">{{exam.title}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="card inner">
                     <h3 class="subheader">Klassen</h3>
                     <h1 class="text">{{exam.formIds}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
         </div>
@@ -20,12 +22,14 @@
                 <div class="card inner">
                     <h3 class="subheader">PIN</h3>
                     <h1 class="text">{{exam.pin}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="card inner">
                     <h3 class="subheader">Eingeschriebene Schüler</h3>
                     <h1 class="text">{{exam.nrOfStudents}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
         </div>
@@ -34,12 +38,14 @@
                 <div class="card inner">
                     <h3 class="subheader">Datum</h3>
                     <h1 class="text">{{exam.date | date: 'dd.MM.yyyy'}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="card inner">
                     <h3 class="subheader">Zeit</h3>
                     <h1 class="text">{{exam.startTime | date: 'HH:MM'}}</h1>
+                    <div class="card-footer"></div>
                 </div>
             </div>
         </div>
