--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -117,23 +117,23 @@
         <br>
         <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EverywhereAvailable.png" height="70"
-                     width="70">
-                <h3 style="color: #00a896">Überall verfügbar</h3>
+                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EverywhereAvailable.png" height="120"
+                     width="120">
+                <h3 class="header-sm" style="color: #00a896">Überall verfügbar</h3>
                 <p class="lead">
                     Franklyn läuft auf jeder Plattform und benötigt keine Installation
                 </p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/DetailedAnalysis.png" height="70" width="70">
-                <h3 style="color: #05668d">Analyse</h3>
+                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/DetailedAnalysis.png" height="120" width="120">
+                <h3 class="header-sm" style="color: #05668d">Analyse</h3>
                 <p class="lead">
                     Lehrkräfte können sich den Fortschritt ihrer Schüler live oder im Nachhinein ansehen
                 </p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EqualOpportunities.png" height="70" width="70">
-                <h3 style="color: #02c39a">Chancengleichheit</h3>
+                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EqualOpportunities.png" height="120" width="120">
+                <h3 class="header-sm" style="color: #02c39a">Chancengleichheit</h3>
                 <p class="lead">
                     Jeder bekommt gleichermaßen Zugang zu Informationen und Hilfsmitteln
                 </p>
@@ -147,8 +147,8 @@
         <h2 class="text-center text-uppercase text-white">Download</h2>
         <br>
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light" href="./app/Franklyn%202.0.0.exe">
-                <i class="fab fa-windows mr-2"></i>Download Franklyn3
+            <a class="btn btn-xl btn-download" href="./app/Franklyn%202.0.0.exe">
+                <i class="fab fa-windows mr-2"></i>Download
             </a>
         </div>
         
