--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
@@ -23,9 +23,10 @@
   }
 .body{
   padding-top: 20px;
-  padding-right: 20px;
   background-color: rgb(245, 244, 244) !important;
   height: 100%;
+  width: 100%;
+  border: none;
 }
 .header{
   padding-left: 20px;
@@ -54,6 +55,30 @@
 }
 
 
+.col-9{
+  width: 100%;
+  height: 100%;
+}
+.large{
+  height: 100%;
+  background-color: rgb(245, 244, 244) !important;
+  padding: 0px;
+}
 
+.inline{
+  display: inline;
+}
+
+.col-left{
+  float: left;
+}
+
+.col-right{
+  float: right;
+}
+
+.small{
+  height: 100%;
+}
 
   
