--- a/franklyn-frontend/src/app/components/navbar/navbar.component.css
+++ b/franklyn-frontend/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,10 @@
 
-.navbar{
+.nv{
     background-color: white;
     border-bottom: 1px solid rgba(0,0,0,.1) !important;
     min-height: 60px;
     padding: 0px;
+    margin-top: 0px;
 }
 .h1{
     color: #777;
@@ -11,10 +12,8 @@
     font-family: sans-serif;
     font-weight: 400;
     float: right;
-    width: 83%;
     height: 60px;
     position: absolute; 
     top: 0;
-    padding-left: 20px;
     padding-top: 15px;
 }
