--- a/franklyn-frontend/src/app/components/navbar/navbar.component.html
+++ b/franklyn-frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <nav class="navbar navbar-light bg-light">
+    <nav class="nv navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">{{header}}</span>
         <span class="navbar-brand mb-0 h1">{{header}}</span>
     </nav>
