--- a/franklyn-frontend/src/app/components/howto/howto.component.css
+++ b/franklyn-frontend/src/app/components/howto/howto.component.css
@@ -2,3 +2,13 @@
     padding-top: 20px;
     padding-right: 20px;
 }
+
+.col-9{
+    width: 100%;
+    height: 100%;
+  }
+  .large{
+    height: 100%;
+    background-color: rgb(245, 244, 244) !important;
+    padding: 0px;
+  }
