--- a/franklyn-frontend/src/app/components/howto/howto.component.html
+++ b/franklyn-frontend/src/app/components/howto/howto.component.html
@@ -1,23 +1,27 @@
 <app-sidebar></app-sidebar>
 
-<div class="container-fluid">
-    <div class="card">
-        <div class="card-body">
-            <div class="bullet-list">
-                <ul>
-                    <p>Professor:</p>
-                    <li>Auf Neuen Test erstellen klicken</li>
-                    <li>Alle nötigen Informationen eingeben</li>
-                    <li>Auf Test erstellen klicken</li>
-                    <li>Unter meine Tests gewünschten Test auswählen</li>
-                    <li>Dann auf Screenshots gehen -> gewünschten Schüler auswählen und Screenshots ansehen</li>
-                    <br>
-                    <br>
-                    <p>Schüler/Studenten:</p>
-                    <li>Den Client auf der Website downloaden (Auf richtiges Betriebssytem achten!)</li>
-                    <li>Download öffnen</li>
-                    <li>Namen und PIN eingeben</li>
-                </ul>
+<div class="row large">
+    <div class="col-9">
+        <div class="container-fluid">
+            <div class="card">
+                <div class="card-body">
+                    <div class="bullet-list">
+                        <ul>
+                            <p>Professor:</p>
+                            <li>Auf Neuen Test erstellen klicken</li>
+                            <li>Alle nötigen Informationen eingeben</li>
+                            <li>Auf Test erstellen klicken</li>
+                            <li>Unter meine Tests gewünschten Test auswählen</li>
+                            <li>Dann auf Screenshots gehen -> gewünschten Schüler auswählen und Screenshots ansehen</li>
+                            <br>
+                            <br>
+                            <p>Schüler/Studenten:</p>
+                            <li>Den Client auf der Website downloaden (Auf richtiges Betriebssytem achten!)</li>
+                            <li>Download öffnen</li>
+                            <li>Namen und PIN eingeben</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
