--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -20,6 +20,8 @@ table tr.even_col {
 
 .header{
     padding-left: 20px;
+    padding-top: 20px;
+    font-size: 35px;
 }
 
 .names{
@@ -52,7 +54,8 @@ table tr.even_col {
 }
 
 .students{
-    width: 250px;
+
+    width: 100%;
 }
 
 .selected {
@@ -68,5 +71,28 @@ table tr.even_col {
 }
 
 .d-block{
-    height: 700px;
+    height: 670px;
+    width: 100%;
+}
+
+.col-9{
+    width: 100%;
+    height: 100%;
+}
+.large{
+    height: 100%;
+    background-color: rgb(245, 244, 244) !important;
+    padding: 0px;
+}
+
+.col-8{
+    margin-right: 50px;
+}
+
+.col-1{
+    width: 300px;
+}
+
+.txt{
+    font-size: 18px;
 }
